# sms-spam-detection

./: .gitignore  Dockerfile  README.MD  mlflow.db  pyproject.toml
notebooks/: 01_EDA.ipynb
pipelines/: main.py
pipelines/steps/: evaluate.py  ingest.py  train.py
src/adapters/nlp/: nltk_processor_adapter.py  tokenizer.py
src/api/: dependencies.py  main.py
src/api/schemas/: prediction_request.py  prediction_response.py
src/core/domain/entities/: sms_message.py  spam_prediction.py
src/core/ports/: model_port.py  nlp_processor.py
src/core/services/: spam_detector_service.py
tests/: __init__.py
tests/integration/: test_nlp_pipeline.py
tests/unit/core/services/: test_spam_detector_service.py
