[project]
name = "sms-spam-detection"
version = "0.1.0"
description = "End-to-end Spam detection pipeline using NLP and Random Forest"
authors = [
    {name = "Brenno Henrique", email = "brennohdev@gmail.com"}
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "nltk>=3.9.0",
    "networkx>=3.3",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "wordcloud>=1.9.3",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "joblib>=1.4.0",
    "mlflow (>=3.10.0,<4.0.0)",
    "dvc (>=3.66.1,<4.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "src"}]

[tool.poetry.group.dev.dependencies]
# Tools to maintain Clean Code and system integrity
pytest = "^8.0.0"          # Essential for lemmatizer unit tests
pytest-cov = "^5.0.0"      # To ensure we are testing the entire core package
ruff = "^0.4.0"            # Extremely fast Linter and Formatter (Modern standard)
mypy = "^1.10.0"           # Static type checking (Type Safety)
ipykernel = "^6.29.0"      # To continue using research notebooks for EDA

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"